--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
 
+	<link href="/img/favicon.png" rel="icon">
+
 	<link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/ionicons.css" rel="stylesheet">
-	
+	<link href="/css/ionicons.css" rel="stylesheet">	
 	<link href="/css/style.css" rel="stylesheet"> 
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
@@ -52,7 +53,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand text-logo" href="#">Ξ ETHER CARDS</a>
+					<a class="navbar-brand text-logo" href="#"><img src="/img/logo.png"> ETHER CARDS</a>
 				</div>
 			<div class="navigation navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
