--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ Backgrounds
 .stripe {background-image:url(../img/stripe.png);}
 .cartographer {background-image:url(../img/cartographer.png);}
 
-.bg-banner {background: url(../img/toucanheader.jpg) no-repeat center bottom; background-size: cover;  background-attachment: fixed;}
+.bg-banner {background: url(../img/finaltoucanheader.jpg) no-repeat center bottom; background-size: cover;  background-attachment: fixed;}
 
 /* ==========================================================================
 Gallery
