--- a/css/ethercards.css
+++ b/css/ethercards.css
@@ -5,6 +5,10 @@
     margin-bottom: 15px;
 }
 
+.mb-40 {
+    margin-bottom: 40px;
+}
+
 body:after{
     content:"";
     position:fixed; /* stretch a fixed position to the whole screen */
@@ -50,6 +54,10 @@ div.icons {
 }
 div.icons img {
     height: 100%;
+}
+
+#tmp-banner img {
+    width: 100%;
 }
 
 @media (max-width: 1200px) {
