--- a/css/ethercards.css
+++ b/css/ethercards.css
@@ -17,6 +17,11 @@ h1 {
     position: relative;
 }
 
+.row.container {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 /* navigation and branding */
 
@@ -265,6 +270,7 @@ h1.abs {
     margin-top: -15px;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: bold;
+    padding-right: 10px;
 }
 
 .custom-cards-img {
