--- a/css/ethercards.css
+++ b/css/ethercards.css
@@ -198,8 +198,8 @@ h1 {
 
 
 section{
-    margin-left: -15px;
-    margin-right: -15px;
+/*     margin-left: -15px;
+    margin-right: -15px; */
     padding: 80px 15px;
 }
 
@@ -708,6 +708,11 @@ span.down {
         margin-top: 0;
         background: #000;
     }
+
+    #home .row{
+        margin-top: 50px;
+        margin-bottom: 80px;
+    }
 }
 
 
@@ -720,6 +725,11 @@ span.down {
     .smart {
         margin-top:80px;
         margin-bottom: 25px;
+    }
+
+    #home .row{
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
 }
 
@@ -751,5 +761,10 @@ span.down {
         display:block !important;
         margin: 20px auto;
 
+    }
+
+    #home .row{
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
 }
